# kugelpos-backend

./: .env.test.sample  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_ja.md  grpc_implementation_plan.md  quick_start.sh
.serena/: project.yml
docs/: upstream-changes-proposal.md
install/: install_doc.md  install_doc_ja.md  install_tools.sh  uninstall_tools.sh  verify_installation.sh
memo/: ISSUE_85_IMPLEMENTATION_REPORT.md  RELEASE_NOTES_v0.2.5.md
scripts/: api-docs-translations.json  build.sh  clean_logs.sh  (+21 more)
services/commons/: .gitignore  logging.conf  pyproject.toml  run_build.sh  run_build_and_copy.sh  run_copy.sh
services/commons/src/kugel_common/: __about__.py  __init__.py  enums.py  security.py  status_codes.py
services/commons/src/kugel_common/config/: settings.py  settings_app.py  settings_auth.py  settings_database.py  settings_datetime.py  settings_stamp_duty.py  settings_tax.py  settings_web.py
services/commons/src/kugel_common/database/: database.py  database_exceptions.py
services/commons/src/kugel_common/exceptions/: __init__.py  base_exceptions.py  error_codes.py  exception_handlers.py  repository_exceptions.py  service_exceptions.py
services/commons/src/kugel_common/grpc/: __init__.py  item_service_pb2.py  item_service_pb2_grpc.py
services/commons/src/kugel_common/middleware/: log_requests.py
services/commons/src/kugel_common/models/documents/: abstract_document.py  base_document_model.py  base_tranlog.py  request_log_document.py  staff_master_document.py  store_info_document.py  terminal_info_document.py  user_info_document.py
services/commons/src/kugel_common/models/repositories/: abstract_repository.py  request_log_repository.py  staff_master_web_repository.py  store_info_web_repository.py
services/commons/src/kugel_common/receipt/: abstract_receipt_data.py  receipt_data_model.py
services/commons/src/kugel_common/schemas/: __init__.py  api_response.py  base_schemas.py  health.py  pagination.py
services/commons/src/kugel_common/utils/: __init__.py  api_exception_handler.py  dapr_client_helper.py  grpc_client_helper.py  health_check.py  http_client_helper.py  misc.py  service_auth.py  slack_notifier.py  terminal_auth.py  text_helper.py
services/commons/tests/: test_terminal_auth.py
(+677 files in other folders)
